<resources>
    <string name="app_name">ViraWeatherReminder</string>
    <string name="send_forecast">Send currentWeather</string>
    <string name="t_c">t</string>
    <string name="wind">wind</string>
    <string name="pressure">pressure</string>
    <string name="humidity">humidity</string>
    <string name="temperature">temperature</string>
    <string name="city">City</string>
    <string name="enter_city_name">Enter city name</string>
    <string name="send_forecast_in_sms">Send currentWeather in SMS</string>
    <string name="what_and_how_to_show">What and how to show:</string>
    <string name="celcius">°C</string>
    <string name="fahrenheit">°F</string>
    <string name="units_of_measure">Units of measure</string>
    <string name="speed_ms">m/s</string>
    <string name="speed_miles_hour">miles/hour</string>
    <string name="pressure_mm">mmHg</string>
    <string name="pressure_mb">mbar</string>
    <string name="percents">%</string>
    <string name="city_picture">city picture</string>
    <string name="event">Event</string>
    <string name="event_date">Event date</string>
    <string name="check_date">Check time</string>
    <string name="Events">Events</string>
    <string name="history">History</string>
    <string name="select_new_city">Select new city</string>
    <string name="nav_header_title">Petrov Aleksey</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="feedback_form">Feedback form</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="send_sms">Send SMS</string>


</resources>
