<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForecastFragment">

    <TextView
        android:id="@+id/tvTownName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/city"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/temperature"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tvTownName" />

    <TextView
        android:id="@+id/tvWind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/wind"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tvTemperature" />

    <TextView
        android:id="@+id/tvPressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/pressure"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tvWind" />

    <TextView
        android:id="@+id/tvHumidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/humidity"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tvPressure" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="vertical" />

    <TextView
        android:id="@+id/tvTemperatureLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/t_c"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tvTemperature"
        app:layout_constraintTop_toBottomOf="@+id/tvTownName" />

    <TextView
        android:id="@+id/tvWindLabel"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/wind"
        app:layout_constraintEnd_toStartOf="@+id/tvWind"
        app:layout_constraintTop_toBottomOf="@+id/tvTemperatureLabel" />

    <TextView
        android:id="@+id/tvPressureLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/pressure"
        app:layout_constraintEnd_toStartOf="@+id/tvPressure"
        app:layout_constraintTop_toBottomOf="@+id/tvWindLabel" />

    <TextView
        android:id="@+id/tvHumidityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/humidity"
        app:layout_constraintEnd_toStartOf="@+id/tvHumidity"
        app:layout_constraintTop_toBottomOf="@+id/tvPressureLabel" />

</android.support.constraint.ConstraintLayout>